# rankfit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  MANIFEST.in.txt  README.md  project.toml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: synthetic_models_demo.py
rankfit/: __init__.py  _init_.py  analyzer.py  metrics.py  visualization.py
tests/: test_analyzer.py  test_granularity.py  test_metrics.py
