[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankfit"
version = "0.2.0"
description = "Segment-level ranking quality metrics for machine learning models — beyond AUC."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Emma Chung", email = "hsiaoyin.chung@gmail.com" }
]
keywords = [
    "machine learning", "model evaluation", "ranking", "AUC",
    "decile analysis", "monotonicity", "kendall tau"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "twine>=4.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/EMMA-CHUNG/rankfit"
Repository = "https://github.com/EMMA-CHUNG/rankfit"
Issues = "https://github.com/EMMA-CHUNG/rankfit/issues"
Documentation = "https://github.com/EMMA-CHUNG/rankfit#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["rankfit*"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rankfit --cov-report=term-missing"
